# ptyx-mcq

./: .gitignore  CHANGELOG.md  Makefile  README.md  justfile  new-conflicts-handling-architecture.md  new-main-scan-algorithm-v2.md  new-main-scan-algorithm.md  pyproject.toml
doc/: algo_detection_carres.odt  new-main-scan-algorithm-v2.md  new-score-algorithms.md
draft/: sendmail.py
ptyx_mcq/: __init__.py  cli.py  dev_cli.py  dump.profile  io_tools.py  parameters.py  printing.py
ptyx_mcq/compile/: extend_latex_generator.py  generate_ptyx_code.py  header.py  make.py
ptyx_mcq/make/: __init__.py  exercises_parsing.py  extend_latex_generator.py  generate_ptyx_code.py  header.py  include_directives_parsing.py  include_parser.py  make.py  make_command.py  parser_tools.py
ptyx_mcq/other_commands/: clear.py  dev.py  doc.py  fix.py  install.py  new.py  see.py  template.py  update.py
ptyx_mcq/scan/: __init__.py  amend.py  calibration.py  checkbox_analyzer.py  color.py  conflict_solver.py  data_handler.py  data_manager.py  data_storage.py  document_data.py  evaluation_strategies.py  image_viewer.py  paths_handler.py  pdftools.py  scan.py  scan_doc.py  scan_pic.py  scanner.py  scores.py  scores_manager.py  square_detection.py  tools.py  types_declaration.py  visual_debugging.py
ptyx_mcq/scan/data/: __init__.py  documents.py  extract.py  extraction.py  main_manager.py  paths_manager.py  pictures.py  questions.py  structures.py  students.py
ptyx_mcq/scan/data/analyze/: __init__.py  checkboxes.py  student_names.py
ptyx_mcq/scan/data/conflict_gestion/: __init__.py
ptyx_mcq/scan/data_gestion/: data_handler.py  document_data.py  paths_handler.py
ptyx_mcq/scan/data_gestion/conflict_handling/: __init__.py  config.py  data_check.py  integrity_check.py
ptyx_mcq/scan/pdf/: amend.py  extract.py  pdftools.py  utilities.py
ptyx_mcq/scan/picture_analyze/: calibration.py  checkbox_analyzer.py  identify_doc.py  image_viewer.py  scan_pic.py  square_detection.py  types_declaration.py
ptyx_mcq/scan/score_management/: evaluation_strategies.py  scores_manager.py
ptyx_mcq/template/: README.txt  new.ptyx
ptyx_mcq/template/questions/: question1.txt  question3.txt
ptyx_mcq/template/scan/: README.txt
ptyx_mcq/templates/original/: new.ptyx
ptyx_mcq/templates/original/questions/: question4.ex
ptyx_mcq/tools/: config_parser.py  extend_literal_eval.py  include_parser.py  io_tools.py  math.py  misc.py  pdf.py  pic.py  scriptlib.py
src/ptyx_mcq/: __init__.py  cli.py  dev_cli.py  parameters.py
src/ptyx_mcq/make/: __init__.py  exercises_parsing.py  extend_latex_generator.py  generate_ptyx_code.py  header.py  include_directives_parsing.py  make_command.py  parser_tools.py
src/ptyx_mcq/make/include_directives/: __init__.py  directives.py  parser.py  update.py
src/ptyx_mcq/other_commands/: doc.py  fix.py  info.py  new.py  see.py  update.py
src/ptyx_mcq/scan/: __init__.py  scan_doc.py
src/ptyx_mcq/scan/data/: __init__.py  amend.py  documents.py  extract.py  paths_manager.py  pictures.py  questions.py  students.py
src/ptyx_mcq/scan/picture_analyze/: calibration.py  identify_doc.py  image_viewer.py  square_detection.py  types_declaration.py
src/ptyx_mcq/scan/score_management/: evaluation_strategies.py  scores_manager.py
src/ptyx_mcq/scan/scores/: printers.py  scores_manager.py
src/ptyx_mcq/tools/: colors.py  config_parser.py  evaluation_strategies.py  io_tools.py  math.py  misc.py  pdf.py  pic.py
src/ptyx_mcq/tools/parse_config/: config.py  subtypes.py
tests/: __init__.py  conftest.py  loading-sty-files.txt  test_checkboxes_interpretation.py  test_cli.py  test_config_parser.py  test_conflict_solver.py  test_errors.py  test_evaluation_strategies.py  test_exercises.py  test_include.ptyx  test_include.py  test_latex_generation.py  test_mcq.py  test_pdf_extraction.py  test_scan_tools.py  test_shuffle.ptyx  test_shuffle_1.ptyx  test_tools.py  test_unicity_of_answers.ptyx  toolbox.py
tests/assets/bad-pdf-scan/: DS-final.ptyx.mcq.config.json  scores.csv
tests/assets/cli-tests/caching_test/: new.ptyx.mcq.config.json  patched_scores.csv  unpatched_scores.csv
tests/assets/ptyx-files/bug-verbatim/: bug-verbatim-ex.ptyx
tests/assets/ptyx-files/format-answers/: at-directives.tex  verbatim_code.ptyx
tests/blank-page-test/: reference_scores.csv
tests/blank-page-test/scan/: scan-1-2.odg
tests/caching_test/: new.ptyx.mcq.config.json
tests/caching_test/.scan/: patched_scores.csv
tests/caching_test/scan/: scan-1-2.odg
tests/ptyx-files/: at-directives.ptyx  at-directives.tex  math_formatting.ptyx  minimal-working-example.ptyx  minimal-working-example.tex  multiline_answers.ptyx  test_include_glob.ptyx  test_neutralized_questions.ptyx  test_new_include_syntax.ptyx  test_verbatim_code.ptyx  unicity_of_answers.ptyx  verbatim_code.ptyx
tests/ptyx-files/bug-verbatim/: bug-verbatim.ex  bug-verbatim.ptyx
tests/ptyx-files/format-answers/: math_formatting.ptyx
tests/ptyx-files/other/: partial-test.ptyx  questions_context.ptyx  shuffle.ptyx
tests/ptyx-files/short questions/: question1.ex
tests/ptyx-files/with-exercises/: include_glob.ptyx  new.ptyx  new_include_syntax.ptyx
tests/test-1/ex/: 2.ex
tests/test-conflict-solver-data/no-conflict/: no-conflict.ptyx.mcq.config.json
tests/test_conflict_solver/: __init__.py  answers_check_data.py  conftest.py  test_answers_check.py  test_integrity_problems.py  test_student_names_problems.py
tests/test_make/: test_exercises.py  test_include.py  test_latex_generation.py  toolbox.py
tests/test_scan/: test_bad_pdf_scan.py  test_checkboxes_interpretation.py
tests/test_scan/test_conflict_solver/: __init__.py  conftest.py  test_answers_check.py  test_integrity_problems.py  test_student_names_problems.py
tests/test_tools/: test_config_parser.py  test_evaluation_strategies.py  test_tools.py
tests/unfilled-doc-test/: mcq-ie2.ptyx.mcq.config.json
(+81 files in other folders)
