[tool.poetry]
name = "ptyx-mcq"
version = "27.1.0"
description = "pTyX-MCQ is a generator/scanner of MCQ, based on pTyX."
authors = ["Nicolas Pourcelot <nicolas.pourcelot@gmail.com>"]
repository = "https://github.com/wxgeo/ptyx"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["python", "tikz", "latex", "pdf", "exam", "mcq", "student"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.0"
Pillow = "^9.2"
sympy = "~1.11"
pymupdf = "^1.21.1"
ptyx = "^28.1.1"
smallgraphlib = "^0.6.3"
platformdirs = "^3.2.0"
openpyxl = "^3.1.2"
argcomplete = "^3.1.2"


[tool.poetry.group.dev.dependencies]
types-openpyxl = "^3.1.0.12"
types-Pillow = "^9.0.20"
pytest = "^7"
mypy = "^1.0"
black = "^23.3.0"
tox = "^4.1.2"
sphinx-autodoc-typehints = "^1.18.3"
sphinx-rtd-theme = "^1.0.0"#
myst-parser = "^1.0.0"
# Version 7.29+ are buggy !
python-semantic-release = "7.28.1"
ptyx = {path = "../ptyx", develop = true}
ruff = "^0.1.2"
pytest-xdist = "^3.5.0"

[tool.poetry.scripts]
mcq = 'ptyx_mcq.cli:main'
mcq-dev = 'ptyx_mcq.dev_cli:main'

[tool.poetry.plugins."ptyx.extensions"]
mcq = "ptyx_mcq"

[tool.mypy]
implicit_optional = true
warn_redundant_casts = true
# enable_error_code = true
warn_unused_ignores = true

[tool.semantic_release]
version_variable = "pyproject.toml:version"

[tool.black]
line-length = 110

[tool.ruff]
line-length = 110

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = true
isolated_build = True
envlist = py311

[testenv]
passenv = HOME
allowlist_externals = poetry
commands =
    poetry install -v
    poetry run ruff ptyx_mcq tests
    poetry run mypy ptyx_mcq tests
    poetry run pytest -n auto tests
"""
