[project]
name = "ptyx-mcq"
version = "31.0.1"
description = "pTyX-MCQ is a generator/scanner of MCQ, based on pTyX."
authors = [{ name = "Nicolas Pourcelot", email = "nicolas.pourcelot@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = [
    "python",
    "tikz",
    "latex",
    "pdf",
    "exam",
    "mcq",
    "student",
]
dependencies = [
    "Pillow>=9.2",
    "ptyx>=29.2",
    "smallgraphlib>=1.1.1",
    "platformdirs>=4,<5",
    "openpyxl>=3.1.2",
    "argcomplete>=3.1.2,<4",
    "pymupdf>=1.25.1,<2",
]

[project.urls]
Repository = "https://github.com/wxgeo/ptyx"

[project.scripts]
mcq = "ptyx_mcq.cli:main"
mcq-dev = "ptyx_mcq.dev_cli:main"

[project.entry-points."ptyx.extensions"]
mcq = "ptyx_mcq"

[dependency-groups]
dev = [
    "types-openpyxl",
    "types-Pillow",
    "sphinx-autodoc-typehints>=1.18.3,<2",
    "sphinx-rtd-theme>=1.0.0,<2",
    "myst-parser>=1.0.0,<2",
    "pytest-xdist>=3.5.0,<4",
    "pytest-profiling>=1.8.1,<2",
]

[tool.uv]

[tool.uv.sources]
ptyx = { workspace = true, editable = true }

[build-system]
requires = ["uv_build>=0.9.6,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name= "ptyx_mcq"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""

[semantic_release.remote.token]
env = "GH_TOKEN"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
filterwarnings = [
    'ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning',
    'ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning',
    'ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning',
]

[tool.mypy]
implicit_optional = true
warn_redundant_casts = true
# enable_error_code = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true

[tool.ruff]
line-length = 110

